--- a/requirements.txt
+++ b/requirements.txt
@@ -10,30 +10,30 @@ fastapi==0.85.0
 uvicorn==0.18.3
 #datascience
 jupyter==1.0.0
-pandas==1.5.0
-numpy==1.23.3
-scikit-learn==1.1.2
-matplotlib==3.6.0
-seaborn==0.12.0
-dask==2022.9.2
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
+dask
 #geo
-geopy==2.2.0
+geopy
 #MLOps
 gradio==3.4.1
 streamlit==1.13.0
 protobuf==3.16.0
 onnx==1.12.0
 mlflow==1.29.0
-databricks==0.2
-databricks-cli==0.17.3
-databricks-sql-connector==2.1.0
+databricks
+databricks-cli
+databricks-sql-connector
 ##MLOps-HuggingFace
-transformers==4.22.2
-datasets==2.5.2
-tokenizers==0.12.1
+transformers
+datasets
+tokenizers
 #deep learning
-torch==1.12.1
-torchvision==0.13.1
-tensorflow==2.10.0
+torch
+torchvision
+tensorflow
 
 
