updated requirement files again

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 #devops
-black==22.3.0
-click==8.1.3 
-pytest==7.1.3
-pytest-cov==4.0.0
-pylint==2.15.3
-boto3==1.24.87
+black
+click 
+pytest
+pytest-cov
+pylint
+boto3
 #web
-fastapi==0.85.0
-uvicorn==0.18.3
+fastapi
+uvicorn
 #datascience
-jupyter==1.0.0
+jupyter
 pandas
 numpy
 scikit-learn
@@ -19,13 +19,13 @@ dask
 #geo
 geopy
 #MLOps
-gradio==3.4.1
-streamlit==1.13.0
-protobuf==3.16.0
-onnx==1.12.0
-mlflow==1.29.0
+gradio
+streamlit
+protobuf
+onnx
+mlflow
 databricks
-databricks-cli
+daskatabricks-cli
 databricks-sql-connector
 ##MLOps-HuggingFace
 transformers
